--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -6,7 +7,15 @@ h1 {
   font-size: 50px;
 }
 
-.name-heighlight {
+h2 {
+  font-size: 40px;
+}
+
+p {
+  color: dimgray;
+}
+
+.orange-heighlight {
   color: orange;
 }
 
@@ -19,4 +28,57 @@ h1 {
 
 .half-width img {
   width: 100%;
+}
+
+.top-banner {
+  background-image: url('images/top-banner.png');
+  background-repeat: no-repeat;
+}
+
+section {
+  height: 500px;
+  padding-bottom: 120px;
+}
+
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(45deg, lightSalmon, tomato);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+}
+
+.dream-area {
+  background-image: url('images/dream-bg.png');
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.single-experience {
+  box-shadow: 10px 10px 40px gray;
+  border-radius: 5px;
+  height: 80%;
+}
+
+.experience-area {
+  background-image: url('images/exp-bg.png');
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+#full-stack {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, lightSalmon, tomato);
+  border-image-slice: 1;
+}
+
+#jr-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, blue, cyan);
+  border-image-slice: 1;
+}
+
+footer p {
+  text-align: center;
 }
